# bsp-waypointer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/bsp_waypointer/: __init__.py  bsp_parser.py  cli.py  constants.py  entity_analyzer.py  geometry_extractor.py  navmesh_generator.py  ray_tracer.py  rcw_writer.py  recast_navmesh.py  vector.py  waypoint_converter.py
tests/: __init__.py  test_constants.py  test_ray_tracer.py  test_recast_navmesh.py  test_vector.py
